--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -61,11 +61,19 @@
 				<div class="pokedex-title__num"><span>2</span></div>
 				<p class="pokedex-title__text">Analyse your selected Pokemon...</p>
 			</div>
-			<img
-				class="explanation-card__img"
-				src="assets/img/functionality-2.jpg"
-				alt=""
-			/>
+
+			<div class="explanation-card__img-group">
+				<img
+					class="explanation-card__img"
+					src="assets/img/functionality-2_1.jpg"
+					alt=""
+				/>
+				<img
+					class="explanation-card__img"
+					src="assets/img/functionality-2_2.jpg"
+					alt=""
+				/>
+			</div>
 			<div class="bubble-text">
 				Just point the cursor on the card and you will see all the data
 				available: Name, ability, height, weight, types and stats!
