--- a/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-map/pokemon-map.component.scss
@@ -1,7 +1,3 @@
-.map {
-	height: 300px;
-}
-
 .leaflet-popup-content-wrapper .leaflet-popup-content {
 	color: red;
 }
@@ -27,6 +23,7 @@
 
 .map {
 	border-radius: 2rem;
+	height: 47vh;
 }
 
 .icon-img {
