Add responsiveness to functionality section

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -82,7 +82,7 @@
 		<div class="explanation-card">
 			<div class="pokedex-title">
 				<div class="pokedex-title__num"><span>3</span></div>
-				<p class="pokedex-title__text">And search for them!</p>
+				<p class="pokedex-title__text">And catch 'em all!</p>
 			</div>
 			<img
 				class="explanation-card__img"
