--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.html
@@ -1,5 +1,5 @@
-<div class="container" *ngIf="pokemonSelected">
-	<div class="container--selected">
+<div class="container">
+	<div class="container--selected" *ngIf="pokemonSelected">
 		<div class="panel">
 			<div class="panel__info">
 				<app-pokemon-card></app-pokemon-card>
@@ -9,11 +9,10 @@
 			</div>
 		</div>
 	</div>
-</div>
-<div class="container" *ngIf="pokemonSelected === undefined">
 	<img
 		src="../../../assets/img/pikachu-search.png"
 		alt="Unselected picture"
+		*ngIf="pokemonSelected === undefined"
 		class="container--no-selected"
 	/>
 </div>
