--- a/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/pokedex/pokemon-detail/pokemon-detail.component.scss
@@ -2,16 +2,20 @@
 
 .container {
 	padding: 2rem;
+	display: flex;
+	justify-content: center;
 
 	&--selected {
 		height: 100%;
 		background-color: #db4545;
 		border-radius: 20px;
 		padding: 2rem;
+		width: 100%;
 	}
 
 	&--no-selected {
-		width: 55%;
+		width: 30vw;
+		min-width: 250px;
 	}
 }
 
