--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -329,6 +329,7 @@
 .title {
 	width: 100%;
 	height: 23%;
+	font-weight: bold;
 	font-size: 40px;
 	text-align: center;
 	text-transform: uppercase;
@@ -606,8 +607,15 @@
 	.card {
 		width: 220px !important;
 		height: 220px !important;
-		&--text {
-			font-size: 15px;
+		&__front {
+			&--text {
+				font-size: 15px;
+			}
+		}
+		&__back {
+			&--text {
+				font-size: 14px;
+			}
 		}
 	}
 	.info {
