--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -526,6 +526,18 @@
 	.info {
 		margin: 50px auto;
 	}
+	.card {
+		&__front {
+			&--text {
+				font-size: 18px;
+			}
+		}
+		&__back {
+			&--text {
+				font-size: 18px;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 480px) {
@@ -574,7 +586,6 @@
 			}
 		}
 	}
-
 	.title {
 		font-size: 18px !important;
 		margin-top: 1vh !important;
@@ -627,16 +638,21 @@
 	.main-bottom {
 		box-sizing: border-box;
 		justify-content: center;
+		height: calc(100vh - 50px);
 		&__rights {
-			margin-bottom: 0em;
 			font-size: 20px;
 		}
 		.card {
-			width: 300px !important;
-			height: 300px !important;
+			width: 400px !important;
+			height: 400px !important;
 		}
 	}
+	.title {
+		position: absolute;
+		top: 0;
+	}
+
 	.info {
-		max-width: 1500px;
+		max-width: 1300px;
 	}
 }
