--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -27,7 +27,7 @@
 	</div>
 </section>
 
-<section class="functionality-section">
+<section class="functionality-section" id="section-2">
 	<svg
 		class="functionality-section__wave"
 		class=""
@@ -96,7 +96,7 @@
 	</div>
 </section>
 
-<section class="main-bottom">
+<section class="main-bottom" id="section-3">
 	<svg
 		class="main-bottom__wave"
 		viewBox="0 0 1599 126"
