--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,11 +1,12 @@
 <div class="component-box">
-	<div class="pokedex" *ngIf="pokemonLoaded; else loading">
+	<!-- <div class="pokedex" *ngIf="pokemonLoaded; else loading"> -->
+	<div class="pokedex">
 		<app-pokemon-list class="pokedex__pokemon-list"></app-pokemon-list>
 		<div class="pokedex__pokemon-detail">
 			<router-outlet></router-outlet>
 		</div>
 	</div>
-	<div>
+	<!-- <div>
 		<ng-template #loading>
 			<div class="loading-pokeball">
 				<img
@@ -14,5 +15,5 @@
 				/>
 			</div>
 		</ng-template>
-	</div>
+	</div> -->
 </div>
