--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,10 +1,6 @@
 <div class="component-box">
 	<div class="pokedex" *ngIf="pokemonLoaded; else loading">
-		<!-- <div class="pokedex"> -->
-		<app-pokemon-list
-			class="pokedex__pokemon-list"
-			[pokemonList]="pokemons"
-		></app-pokemon-list>
+		<app-pokemon-list class="pokedex__pokemon-list"></app-pokemon-list>
 		<div class="pokedex__pokemon-detail">
 			<router-outlet></router-outlet>
 		</div>
