--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,6 @@
-@import '../../commonStyles.scss';
+@import 'base/base';
+@import 'base/typography';
+@import 'abstracts/variables';
 
 .header {
 	display: flex;
