--- a/src/app/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokedex/pokemon-list/pokemon-list.component.html
@@ -23,7 +23,7 @@
 		<div *ngIf="pokemonList != undefined" class="list">
 			<div
 				class="elem"
-				(click)="renderPokemon(elem.id - 1)"
+				(click)="renderPokemon(elem.name)"
 				*ngFor="
 					let elem of pokemonList | searcherFilter: searchPokemonName;
 					index as i
@@ -31,7 +31,11 @@
 			>
 				<span class="elem__id">{{ elem.id }}</span>
 				<div class="elem__info">
-					<img class="elem__img" src="{{ elem.imagePath }}" alt="pokemon-img" />
+					<img
+						class="elem__img"
+						src="{{ elem.imagePath }}"
+						alt="pokemon-img"
+					/>
 					<p class="elem__name">{{ elem.name }}</p>
 				</div>
 			</div>
