Add new folder structure

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -22,7 +22,10 @@
 	</div>
 
 	<div class="oak-professor">
-		<img class="oak-professor__image" src="../../assets/img/pokemon-prof.png" />
+		<img
+			class="oak-professor__image"
+			src="../../assets/img/pokemon-prof.png"
+		/>
 		<img class="oak-professor__pokemon" [src]="imgSource" alt="" />
 	</div>
 </section>
@@ -59,7 +62,9 @@
 		<div class="explanation-card--double">
 			<div class="pokedex-title">
 				<div class="pokedex-title__num"><span>2</span></div>
-				<p class="pokedex-title__text">Analyse your selected Pokemon...</p>
+				<p class="pokedex-title__text">
+					Analyse your selected Pokemon...
+				</p>
 			</div>
 
 			<div class="explanation-card__img-group">
@@ -123,7 +128,7 @@
 		</div>
 	</div>
 	<p class="main-bottom__rights">
-		This is a not-for-profit project. None of the images used in this projects
-		below us. All rights are reserved to The Pokemon Company
+		This is a not-for-profit project. None of the images used in this
+		projects below us. All rights are reserved to The Pokemon Company
 	</p>
 </section>
