--- a/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokedex/pokemon-list/pokemon-list.component.html
@@ -31,7 +31,11 @@
 			>
 				<span class="elem__id">{{ elem.id }}</span>
 				<div class="elem__info">
-					<img class="elem__img" src="{{ elem.imagePath }}" alt="pokemon-img" />
+					<img
+						class="elem__img"
+						src="{{ elem.imagePath }}"
+						alt="pokemon-img"
+					/>
 					<p class="elem__name">{{ elem.name }}</p>
 				</div>
 			</div>
