--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.scss
@@ -29,7 +29,7 @@
 		border-radius: 2rem;
 
 		//Pokeball SVG background
-		background-image: url(./../../../../assets/img/pokeball-bg.svg);
+		background-image: url('/assets/img/pokeball-bg.svg');
 		background-repeat: no-repeat;
 		background-size: 150%; // Size pokeball bg
 		background-position: 0 100%; // Placed left bottom
