BEM opt. headers main section

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,4 +1,4 @@
-<section class="intro-section">
+<main class="intro-section">
 	<div class="intro-section__wave">
 		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 			<path
@@ -9,10 +9,16 @@
 		</svg>
 	</div>
 
-	<div class="titles">
-		<h1 class="titles__title--black">Discover</h1>
-		<h1 class="titles__title--gray">Learn</h1>
-		<h1 class="titles__title--red">Explore</h1>
+	<div class="intro-section__headings">
+		<h1 class="heading-primary heading-primary--black u-text-left">
+			Discover
+		</h1>
+		<h1 class="heading-primary heading-primary--gray u-text-center">
+			Learn
+		</h1>
+		<h1 class="heading-primary heading-primary--red u-text-right">
+			Explore
+		</h1>
 	</div>
 
 	<div class="btn-landing">
@@ -28,7 +34,7 @@
 		/>
 		<img class="oak-professor__pokemon" [src]="imgSource" alt="" />
 	</div>
-</section>
+</main>
 
 <section class="functionality-section" id="section-2">
 	<svg
