Replace Animations to is own file in animations.scss

--- a/src/styles/base/_animations.scss
+++ b/src/styles/base/_animations.scss
@@ -38,3 +38,14 @@
 		transform: rotate(360deg);
 	}
 }
+
+@keyframes btn-animation {
+	from {
+		right: 0;
+	}
+
+	to {
+		right: 55px;
+		opacity: 1;
+	}
+}
