card color now gets the color from the pokemonObject

--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -15,9 +15,7 @@
 					<!-- Background Color -->
 					<div
 						class="card__front--bg"
-						[style.background-color]="
-							colorBackground(pokemonSelected.type[0])
-						"
+						[style.background-color]="pokemonSelected.colorType"
 					>
 						<!-- Image -->
 						<img
@@ -51,9 +49,7 @@
 					<!-- Background Color -->
 					<div
 						class="card__front--bg"
-						[style.background-color]="
-							colorBackground(pokemonSelected.type[0])
-						"
+						[style.background-color]="pokemonSelected.colorType"
 					>
 						<!-- Stats bars Div -->
 						<div class="card__stats">
