Functionality Section refactorization title

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -30,10 +30,9 @@
 	</div>
 </main>
 
-<section class="functionality-section" id="section-2">
+<section class="section-functionality" id="section-2">
 	<svg
-		class="functionality-section__wave"
-		class=""
+		class="section-functionality__wave"
 		viewBox="0 0 1599 126"
 		fill="none"
 		xmlns="http://www.w3.org/2000/svg"
@@ -43,7 +42,9 @@
 			fill="#273036"
 		/>
 	</svg>
-	<h2 class="title">The Pokedex</h2>
+	<h2 class="heading-secondary u-text-center u-margin-bottom-big">
+		The Pokedex
+	</h2>
 	<div class="functionalities">
 		<div class="explanation-card">
 			<div class="pokedex-title">
