--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -28,3 +28,9 @@ body {
 		animation: opacity-animation 1s 3s forwards;
 	}
 }
+
+.heading-secondary {
+	color: $color-white;
+	font-weight: bold;
+	font-size: 4rem;
+}
