--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -24,6 +24,7 @@
 		bottom: -3px;
 		width: 100%;
 		height: auto;
+		transition: all 0.7s;
 		animation: scaleY-animation 1s;
 	}
 
@@ -51,10 +52,12 @@
 	}
 }
 
-.functionality-section {
+.section-functionality {
 	position: relative;
+	overflow: hidden;
 	box-sizing: border-box;
-	width: 100%;
+	padding: 5rem 0rem;
+	height: 100vh;
 
 	.functionalities {
 		display: flex;
@@ -106,7 +109,9 @@
 
 	&__wave {
 		position: absolute;
+		z-index: -1;
 		top: 0;
+		left: 0;
 	}
 
 	.title {
@@ -222,18 +227,6 @@
 	}
 }
 
-.title {
-	width: 100%;
-	height: 23%;
-	font-weight: bold;
-	font-size: 40px;
-	text-align: center;
-	text-transform: uppercase;
-	color: white;
-	margin-top: 1em;
-	z-index: 1;
-}
-
 .info {
 	display: flex;
 	flex-flow: row wrap;
@@ -314,6 +307,15 @@
 		width: 70%;
 		height: auto;
 		border-radius: 50%;
+	}
+}
+
+@media (max-width: 1024px) {
+	.intro-section {
+		&__wave {
+			transform-origin: bottom;
+			transform: scaleY(1.7);
+		}
 	}
 }
 
