now we get the colorType for the card from the getter method on the TS file

--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -15,7 +15,7 @@
 					<!-- Background Color -->
 					<div
 						class="card__front--bg"
-						[style.background-color]="pokemonSelected.colorType"
+						[style.background-color]="colorType"
 					>
 						<!-- Image -->
 						<img
