changing public and private methods and properties of pokemon-card

--- a/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
+++ b/src/app/components/pokedex/pokemon-detail/pokemon-card/pokemon-card.component.html
@@ -15,7 +15,7 @@
 					<!-- Background Color -->
 					<div
 						class="card__front--bg"
-						[style.background-color]="colorType"
+						[style.background-color]="pokemonColorType"
 					>
 						<!-- Image -->
 						<img
@@ -49,7 +49,7 @@
 					<!-- Background Color -->
 					<div
 						class="card__front--bg"
-						[style.background-color]="pokemonSelected.colorType"
+						[style.background-color]="pokemonColorType"
 					>
 						<!-- Stats bars Div -->
 						<div class="card__stats">
