Functionality section BEM optimization on bubble info

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -60,11 +60,14 @@
 				src="assets/img/functionality-1.jpg"
 				alt=""
 			/>
-			<div class="bubble-text">
-				You can select the first 151 Pokemons and search them by name
+			<div class="explanation-card__info ">
+				<div class="bubble-text">
+					You can select the first 151 Pokemons and search them by
+					name
+				</div>
 			</div>
 		</div>
-		<div class="explanation-card--double">
+		<div class="explanation-card">
 			<app-background-dex-style
 				[num]="2"
 				[text]="'Analyze your selected Pokemon'"
@@ -82,9 +85,12 @@
 					alt=""
 				/>
 			</div>
-			<div class="bubble-text">
-				Just point the cursor on the card and you will see all the data
-				available: Name, ability, height, weight, types and stats!
+			<div class="explanation-card__info ">
+				<div class="bubble-text">
+					Just point the cursor on the card and you will see all the
+					data available: Name, ability, height, weight, types and
+					stats!
+				</div>
 			</div>
 		</div>
 		<div class="explanation-card">
@@ -97,8 +103,14 @@
 				src="assets/img/functionality-3.jpg"
 				alt=""
 			/>
-			<div class="bubble-text">
-				And of course, you can see where to catch all your Pokemons!
+			<div class="explanation-card__info ">
+				<div class="explanation-card__info ">
+					<div class="bubble-text">
+						Just point the cursor on the card and you will see all
+						the data available: Name, ability, height, weight, types
+						and stats!
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
