--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -34,3 +34,12 @@ body {
 	font-weight: bold;
 	font-size: 4rem;
 }
+
+.bubble-text {
+	background-color: #c4c4c4;
+	border-radius: 10px;
+	padding: 25px;
+	font-size: 2rem;
+	color: #202020;
+	text-align: justify;
+}
